# resources

./: .gitignore  .zshrc  aerospace.toml  snippets.js  starship.toml  ubuntu-setup.md  vscode-keybindings.json  vscode-settings.json
aerospace/: aerospace.toml
app_switcher/: app_switcher.opam  dune-project
archive/: ocaml_app_switcher.tar  sleep-record.tar  sway.tar
gnome/: dconf.sh
home-manager/: home.nix
karabiner/: package-lock.json  package.json
karabiner/src/: index.ts
nix/aarch64-darwin/: Makefile  flake.nix  home.nix  manage_symlinks.sh
nix/aarch64-linux/: Makefile  flake.nix  home.nix
nix/x86_64-linux/: Makefile  desktop.nix  flake.nix  home.nix  update.sh
nvim/: init.lua  install.sh  lazy-lock.json
obsidian/: Makefile  appearance.scss  assets.scss  gen.sh  hotkeys.json  hotkeys.template.json  latex-suite-snippets.js  snippets.js
obsidian/css_snippets/: editor-background-pattern.css  heading-indicator.sass  image.css  text.scss
opencode/: AGENTS.md  opencode.jsonc  tui.json
opencode/commands/: concise.md  eng.md
programs/app-switcher/: default.nix
programs/repo-sync/: builder.sh  default.nix
programs/safe-rm/: builder.sh  default.nix
programs/sleep-record/: Makefile  package-lock.json  package.json
programs/starship_agnocast_kmod/: builder.sh  starship_agnocast_kmod.nix
sway/: rofi.rasi  sway  waybar-style.css  waybar.jsonc
vscode/: install_extensions.sh  keybindings.json  link.sh  settings.json
wezterm/: wezterm.lua
xremap/: Makefile  README.md  xremap-config.yaml  xremap.service  xremap.service.template
(+12 files in other folders)
