(lang dune 3.10)

(name app_switcher)

(generate_opam_files true)

(package
 (name app_switcher)
 (description "Set focus to the specified app using AeroSpace and the open command")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
